--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.14",
+    "@mui/x-charts": "^7.1.0",
     "concurrently": "^8.2.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.3",
     "ws": "^8.16.0"
   },
   "devDependencies": {
