--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@influxdata/influxdb-client": "^1.33.2",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^7.1.0",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
