--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^7.1.0",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
