--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "server": "node src/server.js",
     "client": "next dev",
-    "dev": "concurrently \"node src/server.js\" \"next dev\"",
+    "dev": "concurrently \"nodemon src/server.js\" \"next dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,13 +14,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@influxdata/influxdb-client": "^1.33.2",
-    "@mui/material": "^5.15.14",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@mui/x-charts": "^7.1.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "next": "14.1.4",
+    "nodemon": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "ws": "^8.16.0"
